Rename classes according to regulation

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>國立臺灣大學學生代表大會議事規則</title>
 </head>
 <body>
-  <h1>國立臺灣大學學生代表大會議事規則</h1>
+  <header>國立臺灣大學學生代表大會議事規則</header>
   <ol class="history">
     <li>中華民國82年10月09日學生代表大會通過全文39條</li>
     <li>中華民國83年04月29日學生代表大會修正第8、28條</li>
@@ -27,79 +27,79 @@
     <li>中華民國100年12月19日學生代表大會新增第6-1條；修正第9條</li>
   </ol>
   <h6 data-number="一">第一條<span class="caption">（法源依據）</span></h6>
-  <ol class="statute">
+  <ol class="paragraphs">
     <li>本規則依國立臺灣大學學生會學生代表大會組織法第一條規定訂定之。</li>
   </ol>
   <h6 data-number="二">第二條<span class="caption">（適用範圍）</span></h6>
-  <ol class="statute">
+  <ol class="paragraphs">
     <li>學生代表大會（以下簡稱大會）之議事及大會所設置各委員會議事依本規則行之。</li>
     <li>本會相關法令未盡之處，準用內政部公布之會議規範。</li>
   </ol>
   <h6 data-number="三">第三條<span class="caption">（秘書處應列席大會）</span></h6>
-  <ol class="statute">
+  <ol class="paragraphs">
     <li>大會會議，祕書長應列席，祕書長因故不能列席時，由副祕書長列席或指派秘書一人列席，並配置秘書辦理會議事項。</li>
   </ol>
   <h6 data-number="四">第四條<span class="caption">（會議應簽到）</span></h6>
-  <ol class="statute">
+  <ol class="paragraphs">
     <li>大會會議或委員會會議出席者及列席者，均應署名於簽到單。</li>
   </ol>
   <h6 data-number="五">第五條<span class="caption">（提案之方式）</span></h6>
-  <ol class="statute">
+  <ol class="paragraphs">
     <li>議案應以書面或以文書型式經由通訊網路向秘書處提出。</li>
     <li>臨時動議或亟待解決事項得以口頭方式提出。</li>
     <li>法律案應附具條文及立法理由。</li>
   </ol>
   <h6 data-number="六">第六條<span class="caption">（提案應經連署、附議或簽署）</span></h6>
-  <ol class="statute">
+  <ol class="paragraphs">
     <li>學生代表提案應有一人以上連署或附議。</li>
     <li>行政部門提案應經會長簽署。</li>
   </ol>
   <h6 data-number="六之一">第六條之一<span class="caption">（提案之期限及限制）</span></h6>
-  <ol>
+  <ol class="paragraphs">
     <li>議案至遲應於開會前四日提出，逾時不予列入議程。</li>
     <li>逾時提出之議案，除法律特別規定外，仍得於臨時動議提出。</li>
   </ol>
   <h6 data-number="七">第七條<span class="caption">（提案之形式審查）</span></h6>
-  <ol class="statute">
+  <ol class="paragraphs">
     <li>秘書處收受提案後，應轉交議長處理下列事項：</li>
-    <ol>
+    <ol class="subsections">
       <li>審定提案程序及內容是否合法。</li>
       <li>議案之合併、分開及其次序之變更。</li>
     </ol>
   </ol>
   <h6 data-number="八">第八條<span class="caption">（大會之召集）</span></h6>
-  <ol class="statute">
+  <ol class="paragraphs">
     <li>大會由議長召集之。</li>
   </ol>
   <h6 data-number="九">第九條<span class="caption">（開會通知之編製與議程之編製及寄發）</span></h6>
-  <ol class="statute">
+  <ol class="paragraphs">
     <li>開會通知應按每會期開會次數，依次分別編製。</li>
     <li>開會通知應記載會議會次、會議日期、開始時間及提案截止日期。</li>
     <li>議程至遲應於開會前三日寄發，並附具提案文書、報告文件及關係文書。</li>
   </ol>
   <h6 data-number="十">第十條<span class="caption">（開會通知之發布）</span></h6>
-  <ol class="statute">
+  <ol class="paragraphs">
     <li>開會通知由秘書長編擬，經議長審定後付印；除有特殊情形外，至遲於開會前七日以書面或以文書型式經由通訊網路送達。</li>
     <li>開會通知未能於開會前七日前送達者，該次會議之決議應提報下次會議追認，若遭否決則其決議無效。</li>
   </ol>
   <h6 data-number="十一">第十一條<span class="caption">（定期大會告假）</span></h6>
-  <ol class="statute">
+  <ol class="paragraphs">
     <li>學生代表因故無法出席大會會議者，應於會議召開前三日以書面、以文書型式張貼於大會之電子佈告欄或以電子郵件向秘書處及紀律委員會請假。</li>
     <li>因緊急情況無法於三日前請假者，得於緊急情況消滅後三日內以書面、以文書型式張貼於大會之電子佈告欄或以電子郵件向秘書處及紀律委員會交付說明。</li>
   </ol>
   <h6 data-number="十二">第十二條<span class="caption">（定期大會無故缺席）</span></h6>
-  <ol class="statute">
+  <ol class="paragraphs">
     <li>無故缺席之學生代表名單應公布於大會電子佈告欄；情狀嚴重者，得提請紀律委員會審議懲戒。</li>
   </ol>
   <h6 data-number="十三">第十三條<span class="caption">（預備會議之舉行）</span></h6>
-  <ol class="statute">
+  <ol class="paragraphs">
     <li>大會每會期所舉行之預備會議，依下列程序進行之：</li>
-    <ol>
+    <ol class="subsections">
       <li>宣布開會。</li>
       <li>學生代表報到。</li>
       <li>主席報告。</li>
       <li>議長選舉：</li>
-      <ol>
+      <ol class="items">
         <li>候選人提名。</li>
         <li>政見發表與提問。</li>
         <li>無記名投票。</li>
@@ -107,7 +107,7 @@
         <li>宣布選舉結果。</li>
       </ol>
       <li>副議長選舉：</li>
-      <ol>
+      <ol class="items">
         <li>候選人提名。</li>
         <li>政見發表與提問。</li>
         <li>無記名投票。</li>
@@ -116,14 +116,14 @@
       </ol>
       <li>議長、副議長交接儀式。</li>
       <li>選舉罷免監察委員會委員選舉：</li>
-      <ol>
+      <ol class="items">
         <li>候選人提名。</li>
         <li>舉手投票。</li>
         <li>開票。</li>
         <li>宣布選舉結果。</li>
       </ol>
       <li>紀律委員會委員選舉：</li>
-      <ol>
+      <ol class="items">
         <li>候選人提名。</li>
         <li>舉手投票。</li>
         <li>開票。</li>
@@ -139,22 +139,22 @@
     <li>第一項第七款交接儀式應有學生法官一人、在場學生代表監交。但不及交接者，得於第一次會議中舉辦交接儀式。</li>
   </ol>
   <h6 data-number="十四">第十四條<span class="caption">（定期大會之舉行）</span></h6>
-  <ol class="statute">
+  <ol class="paragraphs">
     <li>每會期間應至少舉行五次會議，進行各項議程。</li>
   </ol>
   <h6 data-number="十五">第十五條<span class="caption">（議程之變更）</span></h6>
-  <ol class="statute">
+  <ol class="paragraphs">
     <li>主席報告議程後，應詢問出席代表有無異議，如無異議，即為認可；如有學生代表提議變更，得經多數議決後變更之。</li>
     <li>經認可或表決之議程再行變更，須經參與表決代表三分之二以上同意方能變更。</li>
   </ol>
   <h6 data-number="十六">第十六條<span class="caption">（發言要式）</span></h6>
-  <ol class="statute">
+  <ol class="paragraphs">
     <li>學生代表發言時，應報告其選區、姓名，並說明其發言性質。</li>
   </ol>
   <h6 data-number="十七">第十七條<span class="caption">（發言次數）</span></h6>
-  <ol class="statute">
+  <ol class="paragraphs">
     <li>除下列情形外，每一學生代表就同一議題之發言，以兩次為限，每次不超過五分鐘：</li>
-    <ol>
+    <ol class="subsections">
       <li>原提案人說明提案要旨。</li>
       <li>說明審查報告之要旨。</li>
       <li>出席代表均已輪流講畢。</li>
@@ -162,20 +162,20 @@
     </ol>
   </ol>
   <h6 data-number="十八">第十八條<span class="caption">（主席裁定及異議程序）</span></h6>
-  <ol class="statute">
+  <ol class="paragraphs">
     <li>會議進行中，主席得自為提出並裁決休息動議、分開動議或討論方式動議。出席代表提出動議時，主席應依會議規範處理之。</li>
     <li>不服主席裁定者，得經一人以上連署或附議提出申訴動議。</li>
     <li>申訴動議之表決可否同數時，維持主席之裁定。</li>
     <li>經出席代表表決認可之主席裁定，其後不得再提出異議。</li>
   </ol>
   <h6 data-number="十九">第十九條<span class="caption">（主席裁定停止討論）</span></h6>
-  <ol class="statute">
+  <ol class="paragraphs">
     <li>主席對於議案之討論，認為已達可付表決之程度時，得裁定停止討論。</li>
   </ol>
   <h6 data-number="二十">第二十條<span class="caption">（表決方式）</span></h6>
-  <ol class="statute">
+  <ol class="paragraphs">
     <li>表決方式由主席就下列方式擇一裁定：</li>
-    <ol>
+    <ol class="subsections">
       <li>無異議表決。</li>
       <li>口頭表決。</li>
       <li>舉手表決。</li>
@@ -188,18 +188,18 @@
     <li>第一項第六款所列方式，經出席代表提議，得出席代表五分之一以上附議或多數贊成，即應採用。</li>
   </ol>
   <h6 data-number="二十一">第二十一條<span class="caption">（表決方式）</span></h6>
-  <ol class="statute">
+  <ol class="paragraphs">
     <li>表決，應就可否兩方依次行之。</li>
     <li>用口頭方式表決，不能得到結果時，經主席裁定改用舉手或其他方式表決。</li>
   </ol>
   <h6 data-number="二十二">第二十二條<span class="caption">（表決結果之異議程序）</span></h6>
-  <ol class="statute">
+  <ol class="paragraphs">
     <li>出席代表對於表決結果提出異議時，經主席裁定得重行表決，但以一次為限。</li>
   </ol>
   <h6 data-number="二十三">第二十三條<span class="caption">（表決之復議）</span></h6>
-  <ol class="statute">
+  <ol class="paragraphs">
     <li>議案經表決通過或否決後，如因情勢變遷或有新資料發現而認為原決議案確有重加研討之必要時，得於下次會議以前提出復議，並應具備下列各款要件：</li>
-    <ol>
+    <ol class="subsections">
       <li>證明動議人確為原案議決時之出席代表，而未曾發言反對原決議案者；如原案議決時，係依投票記名表決或點名表決，並應證明為贊成原決議案者。</li>
       <li>原議案尚未執行者。</li>
       <li>具有與原決議案不同之理由。</li>
@@ -207,52 +207,52 @@
     </ol>
   </ol>
   <h6 data-number="二十四">第二十四條<span class="caption">（額數問題）</span></h6>
-  <ol class="statute">
+  <ol class="paragraphs">
     <li>會議進行中，經出席學代提出額數問題時，主席應催促暫時離席之代表回到議席，並清點在場人數，如不足法定人數，主席應宣布散會或改開談話會。</li>
     <li>談話會中，如已足法定人數，應繼續開會。</li>
   </ol>
   <h6 data-number="二十五">第二十五條<span class="caption">（委員會會議之召集）</span></h6>
-  <ol class="statute">
+  <ol class="paragraphs">
     <li>各委員會會議由主席召集之。</li>
     <li>經各委員會三分之一以上委員連署或經大會議決，主席即應召集該委員會。</li>
   </ol>
   <h6 data-number="二十六">第二十六條<span class="caption">（委員會會議之開會通知）</span></h6>
-  <ol class="statute">
+  <ol class="paragraphs">
     <li>各委員會開會通知由各委員會主席排定；除有特殊情形外，至遲於開會前三日以書面或以文書型式經由通訊網路送達。</li>
     <li>各委員會開會通知未能於開會前三日前送達者，該次會議之決議應提報下次委員會會議或提報大會追認，若遭否決則其決議無效。</li>
   </ol>
   <h6 data-number="二十七">第二十七條<span class="caption">（委員會會議告假）</span></h6>
-  <ol class="statute">
+  <ol class="paragraphs">
     <li>各委員會委員因故無法出席委員會會議者，應於會議召開前以書面、以文書型式張貼於大會之電子佈告欄或以電子郵件向主席請假。</li>
     <li>因緊急情況無法於如期請假者，得於緊急情況消滅後三日內以書面、以文書型式張貼於大會之電子佈告欄或以電子郵件向主席交付說明。</li>
   </ol>
   <h6 data-number="二十八">第二十八條<span class="caption">（委員會會議之主持）</span></h6>
-  <ol class="statute">
+  <ol class="paragraphs">
     <li>委員會主席因故無法主持會議時，由副主席或出席委員互推一人代理之。</li>
   </ol>
   <h6 data-number="二十九">第二十九條<span class="caption">（委員會會議之決議及保留發言權）</span></h6>
-  <ol class="statute">
+  <ol class="paragraphs">
     <li>各委員會之決議，由該委員會之出席委員以多數表決同意決定之。</li>
     <li>出席委員對於該委員會決議不同意者，得聲明保留在大會之發言權。但出席而未聲明保留在大會發言權之委員，不得在大會中提出與委員會決議不同之意見。</li>
   </ol>
   <h6 data-number="三十">第三十條<span class="caption">（委員會聯席會議之召集）</span></h6>
-  <ol class="statute">
+  <ol class="paragraphs">
     <li>委員會聯席會議，由相關之各委員會主席聯合召集之，並互推一人主持會議。</li>
     <li>委員會聯席會議有關開會通知之送達、請假、表決、會議主席事宜準用第二十五條至第二十九條規定。</li>
   </ol>
   <h6 data-number="三十一">第三十一條<span class="caption">（委員會會議及委員會聯席會議之準用）</span></h6>
-  <ol class="statute">
+  <ol class="paragraphs">
     <li>委員會會議、委員會聯席會議相關事宜，除發言次數、第二十五條至第三十條外，準用本法相關規定。</li>
   </ol>
   <h6 data-number="三十二">第三十二條<span class="caption">（大會公報及議事逐字稿之公布）</span></h6>
-  <ol class="statute">
+  <ol class="paragraphs">
     <li>秘書處應於每次大會結束後十五日內公佈大會公報；三十日內公佈議事逐字稿。</li>
     <li>如遇重大事故或七日內另有大會，可延後公佈或將兩次大會合併公佈。</li>
   </ol>
   <h6 data-number="三十三">第三十三條<span class="caption">（大會公報之要式）</span></h6>
-  <ol class="statute">
+  <ol class="paragraphs">
     <li>大會公報應記載下列事項：</li>
-    <ol>
+    <ol class="subsections">
       <li>上期大會公報更正事項。</li>
       <li>會次及其年、月、日、起止時分。</li>
       <li>開會地點。</li>
@@ -266,12 +266,12 @@
     </ol>
   </ol>
   <h6 data-number="三十四">第三十四條<span class="caption">（大會公報及議事逐字稿之更正）</span></h6>
-  <ol class="statute">
+  <ol class="paragraphs">
     <li>議事逐字稿及大會公報如出席學生代表認為有錯誤或遺漏時，應以書面或文書型式經由通訊網路提出，由議長逕行處理。</li>
     <li>前項更正，如議長認為必要時，或出席學生代表於下次會議以口頭提出更正者，應經議決後更正，並將更正部分記載於下次大會公報。</li>
   </ol>
   <h6 data-number="三十五">第三十五條<span class="caption">（施行日期）</span></h6>
-  <ol class="statute">
+  <ol class="paragraphs">
     <li>本規則經學生代表大會通過後，經議長公布之。</li>
     <li>本規則自中華民國一百年八月一日起施行。</li>
   </ol>
