--- a/example.html
+++ b/example.html
@@ -10,22 +10,22 @@
   <article class="act">
     <header>國立臺灣大學學生代表大會議事規則</header>
     <ol class="history">
-      <li>中華民國 82 年 10 月 09 日學生代表大會通過全文 39 條</li>
-      <li>中華民國 83 年 04 月 29 日學生代表大會修正第 8、28 條</li>
-      <li>中華民國 87 年 06 月 22 日學生代表大會增修第 2 條、第 9 條第 1、3 項、第 10 條</li>
-      <li>中華民國 88 年 03 月 31 日學生代表大會修正第 8 條</li>
-      <li>中華民國 89 年 10 月 16 日學生代表大會修正第 17 條</li>
-      <li>中華民國 89 年 10 月 22 日學生代表大會修正第 9 條</li>
-      <li>中華民國 92 年 05 月 30 日學生代表大會修正第 9、12、32 條</li>
-      <li>中華民國 94 年 11 月 18 日學生代表大會修正第 12 條；新增第 12 之 1 條</li>
-      <li>中華民國 95 年 10 月 25 日學生代表大會修正第 8 條</li>
-      <li>中華民國 96 年 06 月 04 日學生代表大會修正第 35 條第 1 項、第 37 條</li>
-      <li>中華民國 96 年 11 月 02 日學生代表大會修正第 12 條第 3 項；新增 12 條第 4 項</li>
-      <li>中華民國 97 年 03 月 13 日學生代表大會修正第 8 條</li>
-      <li>中華民國 100 年 1 月 4 日學規字 099004 號公告，修正第 34 條</li>
-      <li>中華民國 100 年 07 月 22 日學生代表大會修正全文 35 條</li>
-      <li>中華民國 100 年 08 月 22 日學生代表大會修正第 13、18 條</li>
-      <li>中華民國 100 年 12 月 19 日學生代表大會新增第 6-1 條；修正第 9 條</li>
+      <li>民國 82 年 10 月 09 日學代會通過全文 39 條。</li>
+      <li>民國 83 年 04 月 29 日學代會修正第 8、28 條。</li>
+      <li>民國 87 年 06 月 22 日學代會增修第 2 條、第 9 條第 1、3 項、第 10 條。</li>
+      <li>民國 88 年 03 月 31 日學代會修正第 8 條。</li>
+      <li>民國 89 年 10 月 16 日學代會修正第 17 條。</li>
+      <li>民國 89 年 10 月 22 日學代會修正第 9 條。</li>
+      <li>民國 92 年 05 月 30 日學代會修正第 9、12、32 條。</li>
+      <li>民國 94 年 11 月 18 日學代會修正第 12 條；新增第 12 之 1 條。</li>
+      <li>民國 95 年 10 月 25 日學代會修正第 8 條。</li>
+      <li>民國 96 年 06 月 04 日學代會修正第 35 條第 1 項、第 37 條。</li>
+      <li>民國 96 年 11 月 02 日學代會修正第 12 條第 3 項；新增 12 條第 4 項。</li>
+      <li>民國 97 年 03 月 13 日學代會修正第 8 條。</li>
+      <li>民國 100 年 1 月 4 日學規字 099004 號公告，修正第 34 條。</li>
+      <li>民國 100 年 07 月 22 日學代會修正全文 35 條。</li>
+      <li>民國 100 年 08 月 22 日學代會修正第 13、18 條。</li>
+      <li>民國 100 年 12 月 19 日學代會新增第 6-1 條；修正第 9 條。</li>
     </ol>
     <h6 data-number="一">第一條<span class="caption">（法源依據）</span></h6>
     <ol class="paragraphs">
