Use paragraph tag for simple article

--- a/example.html
+++ b/example.html
@@ -28,22 +28,16 @@
       <li>民國 100 年 12 月 19 日學代會新增第 6-1 條；修正第 9 條。</li>
     </ol>
     <h6 data-number="一">第一條<span class="caption">（法源依據）</span></h6>
-    <ol class="paragraphs">
-      <li>本規則依國立臺灣大學學生會學生代表大會組織法第一條規定訂定之。</li>
-    </ol>
+    <p>本規則依國立臺灣大學學生會學生代表大會組織法第一條規定訂定之。</p>
     <h6 data-number="二">第二條<span class="caption">（適用範圍）</span></h6>
     <ol class="paragraphs">
       <li>學生代表大會（以下簡稱大會）之議事及大會所設置各委員會議事依本規則行之。</li>
       <li>本會相關法令未盡之處，準用內政部公布之會議規範。</li>
     </ol>
     <h6 data-number="三">第三條<span class="caption">（秘書處應列席大會）</span></h6>
-    <ol class="paragraphs">
-      <li>大會會議，祕書長應列席，祕書長因故不能列席時，由副祕書長列席或指派秘書一人列席，並配置秘書辦理會議事項。</li>
-    </ol>
+    <p>大會會議，祕書長應列席，祕書長因故不能列席時，由副祕書長列席或指派秘書一人列席，並配置秘書辦理會議事項。</p>
     <h6 data-number="四">第四條<span class="caption">（會議應簽到）</span></h6>
-    <ol class="paragraphs">
-      <li>大會會議或委員會會議出席者及列席者，均應署名於簽到單。</li>
-    </ol>
+    <p>大會會議或委員會會議出席者及列席者，均應署名於簽到單。</p>
     <h6 data-number="五">第五條<span class="caption">（提案之方式）</span></h6>
     <ol class="paragraphs">
       <li>議案應以書面或以文書型式經由通訊網路向秘書處提出。</li>
@@ -69,9 +63,7 @@
       </ol>
     </ol>
     <h6 data-number="八">第八條<span class="caption">（大會之召集）</span></h6>
-    <ol class="paragraphs">
-      <li>大會由議長召集之。</li>
-    </ol>
+    <p>大會由議長召集之。</p>
     <h6 data-number="九">第九條<span class="caption">（開會通知之編製與議程之編製及寄發）</span></h6>
     <ol class="paragraphs">
       <li>開會通知應按每會期開會次數，依次分別編製。</li>
@@ -89,9 +81,7 @@
       <li>因緊急情況無法於三日前請假者，得於緊急情況消滅後三日內以書面、以文書型式張貼於大會之電子佈告欄或以電子郵件向秘書處及紀律委員會交付說明。</li>
     </ol>
     <h6 data-number="十二">第十二條<span class="caption">（定期大會無故缺席）</span></h6>
-    <ol class="paragraphs">
-      <li>無故缺席之學生代表名單應公布於大會電子佈告欄；情狀嚴重者，得提請紀律委員會審議懲戒。</li>
-    </ol>
+    <p>無故缺席之學生代表名單應公布於大會電子佈告欄；情狀嚴重者，得提請紀律委員會審議懲戒。</p>
     <h6 data-number="十三">第十三條<span class="caption">（預備會議之舉行）</span></h6>
     <ol class="paragraphs">
       <li>大會每會期所舉行之預備會議，依下列程序進行之：</li>
@@ -140,18 +130,14 @@
       <li>第一項第七款交接儀式應有學生法官一人、在場學生代表監交。但不及交接者，得於第一次會議中舉辦交接儀式。</li>
     </ol>
     <h6 data-number="十四">第十四條<span class="caption">（定期大會之舉行）</span></h6>
-    <ol class="paragraphs">
-      <li>每會期間應至少舉行五次會議，進行各項議程。</li>
-    </ol>
+    <p>每會期間應至少舉行五次會議，進行各項議程。</p>
     <h6 data-number="十五">第十五條<span class="caption">（議程之變更）</span></h6>
     <ol class="paragraphs">
       <li>主席報告議程後，應詢問出席代表有無異議，如無異議，即為認可；如有學生代表提議變更，得經多數議決後變更之。</li>
       <li>經認可或表決之議程再行變更，須經參與表決代表三分之二以上同意方能變更。</li>
     </ol>
     <h6 data-number="十六">第十六條<span class="caption">（發言要式）</span></h6>
-    <ol class="paragraphs">
-      <li>學生代表發言時，應報告其選區、姓名，並說明其發言性質。</li>
-    </ol>
+    <p>學生代表發言時，應報告其選區、姓名，並說明其發言性質。</p>
     <h6 data-number="十七">第十七條<span class="caption">（發言次數）</span></h6>
     <ol class="paragraphs">
       <li>除下列情形外，每一學生代表就同一議題之發言，以兩次為限，每次不超過五分鐘：</li>
@@ -170,9 +156,7 @@
       <li>經出席代表表決認可之主席裁定，其後不得再提出異議。</li>
     </ol>
     <h6 data-number="十九">第十九條<span class="caption">（主席裁定停止討論）</span></h6>
-    <ol class="paragraphs">
-      <li>主席對於議案之討論，認為已達可付表決之程度時，得裁定停止討論。</li>
-    </ol>
+    <p>主席對於議案之討論，認為已達可付表決之程度時，得裁定停止討論。</p>
     <h6 data-number="二十">第二十條<span class="caption">（表決方式）</span></h6>
     <ol class="paragraphs">
       <li>表決方式由主席就下列方式擇一裁定：</li>
@@ -194,9 +178,7 @@
       <li>用口頭方式表決，不能得到結果時，經主席裁定改用舉手或其他方式表決。</li>
     </ol>
     <h6 data-number="二十二">第二十二條<span class="caption">（表決結果之異議程序）</span></h6>
-    <ol class="paragraphs">
-      <li>出席代表對於表決結果提出異議時，經主席裁定得重行表決，但以一次為限。</li>
-    </ol>
+    <p>出席代表對於表決結果提出異議時，經主席裁定得重行表決，但以一次為限。</p>
     <h6 data-number="二十三">第二十三條<span class="caption">（表決之復議）</span></h6>
     <ol class="paragraphs">
       <li>議案經表決通過或否決後，如因情勢變遷或有新資料發現而認為原決議案確有重加研討之必要時，得於下次會議以前提出復議，並應具備下列各款要件：</li>
@@ -228,9 +210,7 @@
       <li>因緊急情況無法於如期請假者，得於緊急情況消滅後三日內以書面、以文書型式張貼於大會之電子佈告欄或以電子郵件向主席交付說明。</li>
     </ol>
     <h6 data-number="二十八">第二十八條<span class="caption">（委員會會議之主持）</span></h6>
-    <ol class="paragraphs">
-      <li>委員會主席因故無法主持會議時，由副主席或出席委員互推一人代理之。</li>
-    </ol>
+    <p>委員會主席因故無法主持會議時，由副主席或出席委員互推一人代理之。</p>
     <h6 data-number="二十九">第二十九條<span class="caption">（委員會會議之決議及保留發言權）</span></h6>
     <ol class="paragraphs">
       <li>各委員會之決議，由該委員會之出席委員以多數表決同意決定之。</li>
@@ -242,9 +222,7 @@
       <li>委員會聯席會議有關開會通知之送達、請假、表決、會議主席事宜準用第二十五條至第二十九條規定。</li>
     </ol>
     <h6 data-number="三十一">第三十一條<span class="caption">（委員會會議及委員會聯席會議之準用）</span></h6>
-    <ol class="paragraphs">
-      <li>委員會會議、委員會聯席會議相關事宜，除發言次數、第二十五條至第三十條外，準用本法相關規定。</li>
-    </ol>
+    <p>委員會會議、委員會聯席會議相關事宜，除發言次數、第二十五條至第三十條外，準用本法相關規定。</p>
     <h6 data-number="三十二">第三十二條<span class="caption">（大會公報及議事逐字稿之公布）</span></h6>
     <ol class="paragraphs">
       <li>秘書處應於每次大會結束後十五日內公佈大會公報；三十日內公佈議事逐字稿。</li>
