--- a/statute/print/copyright.html
+++ b/statute/print/copyright.html
@@ -2,24 +2,46 @@
   <div id="cip">
   </div>
   <div id="book_title">
-      <span class="subtitle">國立臺灣大學學生會</span>
-      <span>簡明法規彙編</span>
   </div>
-  <dl>
-    <dt>編輯校對</dt>
-    <dd>姜柏任</dd>
-    <dt>出 版 者</dt>
-    <dd>國立臺灣大學開源社</dd>
-    <dt>資料來源</dt>
-    <dd>國立臺灣大學學生會學生代表大會秘書處</dd>
-    <dt>專案網址</dt>
-    <dd>https://github.com/rschiang/ntusc-statute</dd>
-    <dt>出版日期</dt>
-    <dd>民國 106 年 4 月　初版</dd>
-    <dt>定　　價</dt>
-    <dd>300 元</dd>
-    <dd>
-      本書以創用 CC「姓名標示-相同方式分享 4.0」授權釋出予公眾利用。
-    </dd>
-  </dl>
+  <table>
+    <tr>
+      <th colspan="2" class="book title">
+        <span class="secondary">國立臺灣大學學生會</span>
+        <span>簡明法規彙編</span>
+      </th>
+    </tr>
+    <tr>
+      <td>編輯校對</td>
+      <td>姜柏任</td>
+    </tr>
+    <tr>
+      <td>出 版 者</td>
+      <td>國立臺灣大學開源社</td>
+    </tr>
+    <tr>
+      <td>地　　址</td>
+      <td>(10617) 臺北市大安區羅斯福路四段 1 號<br />國立臺灣大學第一學生活動中心 225 室</td>
+    </tr>
+    <tr>
+      <td>資料來源</td>
+      <td>國立臺灣大學學生會學生代表大會秘書處</td>
+    </tr>
+    <tr>
+      <td>專案網址</td>
+      <td><a href="https://github.com/rschiang/ntusc-statute" rel="external">https://github.com/rschiang/ntusc-statute</a></td>
+    </tr>
+    <tr>
+      <td>出版日期</td>
+      <td>民國 106 年 4 月　初版</td>
+    </tr>
+    <tr>
+      <td>定　　價</td>
+      <td>300 元</td>
+    </tr>
+    <tr>
+      <td colspan="2">
+        《簡明法規彙編》以創用 CC「姓名標示–相同方式分享 4.0」授權釋出予公眾自由使用。
+      </td>
+    </tr>
+  </table>
 </div>
