Make base url generation work

--- a/statute/online/footer.html
+++ b/statute/online/footer.html
@@ -1,5 +1,5 @@
 <footer>
     <a href="https://ntuosc.org/" rel="external" target="_blank" class="ntuosc-logo">
-        <img src="docs/assets/ntuosc.svg" width="192" height="79.2" alt="國立臺灣大學開源社發行 / Published by NTU Open Source Community">
+        <img src="https://rschiang.github.io/ntusc-statute/assets/ntuosc.svg" width="192" height="79.2" alt="國立臺灣大學開源社發行 / Published by NTU Open Source Community">
     </a>
 </footer>
