Add title to individual pages

--- a/statute/online/header.html
+++ b/statute/online/header.html
@@ -1,5 +1,6 @@
-<hgroup class="book title">
-    <span class="secondary">國立臺灣大學學生會</span>
-    <span>簡明法規彙編</span>
+<hgroup class="gray book title">
+    <a href="https://rschiang.github.io/ntusc-statute/">
+        <span class="secondary">國立臺灣大學學生會</span>
+        <span>簡明法規彙編</span>
+    </a>
 </hgroup>
-<section id="intro">我們貢獻這所大學之精神於宇宙。</section>
