Remove additional blank

--- a/statute/appendix/tables.html
+++ b/statute/appendix/tables.html
@@ -18,13 +18,13 @@
   <td>理學院</td>
   <td>1數學系(含碩士班、博士班)<br />2物理學系(含碩士在職專班、碩士班、博士班)<br />3化學系(含碩士班：化學組、化學生物學組、博士班：化學組、化學生物學組)<br />4地質科學系(含碩士在職專班：地質組、碩士班：地質組、應用地質組、博士班)<br />5心理學系(含碩士在職專班：一般心理學組、臨床心理學組、碩士班：一般心理學組、臨床心理學組、博士班：一般心理學組、臨床心理學組)<br />6地理環境資源學系(含碩士在職專班、碩士班、博士班)<br />7大氣科學系(含碩士班、博士班)</td>
   <td>1海洋研究所(含碩士班：海洋物理組、海洋地質及地球物理組、海洋生物及漁業組、海洋化學組、博士班)<br />2天文物理研究所(含碩士班、博士班)<br />3應用物理學研究所(含碩士班、博士班)<br />4應用數學科學研究所(含碩士班)</td>
-  <td> <br />1氣候變遷與永續發展國際學位學程(含碩士班、博士班)</td>
+  <td>1氣候變遷與永續發展國際學位學程(含碩士班、博士班)</td>
   </tr>
   <tr>
   <td>社會科學院</td>
   <td>1政治學系(含碩士在職專班、碩士班、博士班)<br />(1)政治理論組<br />(2)國際關係組<br />(3)公共行政組<br />2經濟學系(含碩士在職專班、碩士班、博士班)<br />3社會學系(含碩士班、博士班)<br />4社會工作學系(含碩士班、博士班)</td>
   <td>1國家發展研究所(含碩士在職專班、碩士班、博士班)<br />2新聞研究所(含碩士班)<br />3公共事務研究所(含碩士班)</td>
-  <td> </td>
+  <td></td>
   </tr>
   <tr>
   <td>醫學院</td>
@@ -36,13 +36,13 @@
   <td>牙醫專業學院</td>
   <td>6牙醫學系</td>
   <td>9口腔生物科學研究所(含碩士班、博士班)<br />10臨床牙醫學研究所(含碩士在職專班、碩士班、博士班)</td>
-  <td> </td>
+  <td></td>
   </tr>
   <tr>
   <td>藥學專業學院</td>
   <td>7藥學系(含碩士班、博士班：藥物科技組、分子醫藥組)</td>
   <td>11臨床藥學研究所(含碩士班)</td>
-  <td> </td>
+  <td></td>
   </tr>
   <tr>
   <td>工學院</td>
@@ -60,13 +60,13 @@
   <td>獸醫專業學院</td>
   <td>12獸醫學系(含碩士班、博士班)</td>
   <td>3臨床動物醫學研究所(含碩士班)<br />4分子暨比較病理生物學研究所(含碩士班)</td>
-  <td> </td>
+  <td></td>
   </tr>
   <tr>
   <td>管理學院</td>
   <td>1工商管理學系<br />(1)企業管理組<br />(2)科技管理組<br />2會計學系(含碩士班、博士班)<br />3財務金融學系(含碩士班、博士班)<br />4國際企業學系(含碩士班、博士班)<br />5資訊管理學系(含碩士班、博士班)</td>
   <td>1商學研究所(含碩士在職專班、碩士班、博士班)<br />2企業管理碩士專班<br />3碩士在職專班：知識管理組、高階公共管理組、會計與管理決策組、財務金融組、國際企業管理組、資訊管理組、商學組<br />4臺大-復旦EMBA境外專班<br />5創業創新管理碩士在職專班</td>
-  <td> </td>
+  <td></td>
   </tr>
   <tr>
   <td>公共衛生學院</td>
@@ -78,13 +78,13 @@
   <td>電機資訊學院</td>
   <td>1電機工程學系(含碩士在職專班、碩士班、博士班)<br />2資訊工程學系(含碩士在職專班、碩士班、博士班)</td>
   <td>1光電工程學研究所(含碩士班、博士班)<br />2電信工程學研究所(含碩士在職專班、碩士班、博士班)<br />3電子工程學研究所(含碩士在職專班、碩士班、博士班)<br />4資訊網路與多媒體研究所(含碩士班、博士班)<br />5生醫電子與資訊學研究所(含碩士在職專班、碩士班、博士班)</td>
-  <td> </td>
+  <td></td>
   </tr>
   <tr>
   <td>法律學院</td>
   <td>1法律學系(含碩士班、博士班)<br />(1)法學組<br />(2)司法組<br />(3)財經法學組</td>
   <td>1科際整合法律學研究所(含碩士班)</td>
-  <td> </td>
+  <td></td>
   </tr>
   <tr>
   <td>生命科學院</td>
@@ -94,14 +94,14 @@
   </tr>
   <tr>
   <td>共同教育中心</td>
-  <td> </td>
-  <td> </td>
+  <td></td>
+  <td></td>
   <td>1統計碩士學位學程<br />2運動設施與健康管理碩士學位學程</td>
   </tr>
   <tr>
   <td>進修推廣部(進修學士班)</td>
   <td>1中國文學系<br />2外國語文學系<br />3歷史學系<br />4法律學系<br />5企業管理學系</td>
-  <td> </td>
+  <td></td>
   <td>1事業經營碩士在職學位學程<br />2事業經營法務碩士在職學位學程</td>
   </tr>
   </table>
