--- a/statute/appendix/tables.html
+++ b/statute/appendix/tables.html
@@ -10,99 +10,99 @@
   </tr>
   <tr>
   <td>文學院</td>
-  <td>1中國文學系(含碩士班、博士班)<br />(1)國際學生學士班<br />2外國語文學系(含碩士班、博士班)<br />3歷史學系(含碩士班、博士班)<br />4哲學系(含碩士班、博士班)<br />5人類學系(含碩士班、博士班)<br />6圖書資訊學系(含碩士在職專班、碩士班、博士班)<br />7日本語文學系(含碩士班)<br />8戲劇學系(含碩士班、博士班)</td>
-  <td>1藝術史研究所(含碩士班、博士班)<br />2語言學研究所(含碩士班、博士班)<br />3音樂學研究所(含碩士班、博士班)<br />4臺灣文學研究所(含碩士班、博士班)</td>
-  <td>1華語教學碩士學位學程<br />2翻譯碩士學位學程</td>
+  <td>⒈中國文學系(含碩士班、博士班)<br />⑴國際學生學士班<br />⒉外國語文學系(含碩士班、博士班)<br />⒊歷史學系(含碩士班、博士班)<br />⒋哲學系(含碩士班、博士班)<br />⒌人類學系(含碩士班、博士班)<br />⒍圖書資訊學系(含碩士在職專班、碩士班、博士班)<br />⒎日本語文學系(含碩士班)<br />⒏戲劇學系(含碩士班、博士班)</td>
+  <td>⒈藝術史研究所(含碩士班、博士班)<br />⒉語言學研究所(含碩士班、博士班)<br />⒊音樂學研究所(含碩士班、博士班)<br />⒋臺灣文學研究所(含碩士班、博士班)</td>
+  <td>⒈華語教學碩士學位學程<br />⒉翻譯碩士學位學程</td>
   </tr>
   <tr>
   <td>理學院</td>
-  <td>1數學系(含碩士班、博士班)<br />2物理學系(含碩士在職專班、碩士班、博士班)<br />3化學系(含碩士班：化學組、化學生物學組、博士班：化學組、化學生物學組)<br />4地質科學系(含碩士在職專班：地質組、碩士班：地質組、應用地質組、博士班)<br />5心理學系(含碩士在職專班：一般心理學組、臨床心理學組、碩士班：一般心理學組、臨床心理學組、博士班：一般心理學組、臨床心理學組)<br />6地理環境資源學系(含碩士在職專班、碩士班、博士班)<br />7大氣科學系(含碩士班、博士班)</td>
-  <td>1海洋研究所(含碩士班：海洋物理組、海洋地質及地球物理組、海洋生物及漁業組、海洋化學組、博士班)<br />2天文物理研究所(含碩士班、博士班)<br />3應用物理學研究所(含碩士班、博士班)<br />4應用數學科學研究所(含碩士班)</td>
-  <td>1氣候變遷與永續發展國際學位學程(含碩士班、博士班)</td>
+  <td>⒈數學系(含碩士班、博士班)<br />⒉物理學系(含碩士在職專班、碩士班、博士班)<br />⒊化學系(含碩士班：化學組、化學生物學組、博士班：化學組、化學生物學組)<br />⒋地質科學系(含碩士在職專班：地質組、碩士班：地質組、應用地質組、博士班)<br />⒌心理學系(含碩士在職專班：一般心理學組、臨床心理學組、碩士班：一般心理學組、臨床心理學組、博士班：一般心理學組、臨床心理學組)<br />⒍地理環境資源學系(含碩士在職專班、碩士班、博士班)<br />⒎大氣科學系(含碩士班、博士班)</td>
+  <td>⒈海洋研究所(含碩士班：海洋物理組、海洋地質及地球物理組、海洋生物及漁業組、海洋化學組、博士班)<br />⒉天文物理研究所(含碩士班、博士班)<br />⒊應用物理學研究所(含碩士班、博士班)<br />⒋應用數學科學研究所(含碩士班)</td>
+  <td>⒈氣候變遷與永續發展國際學位學程(含碩士班、博士班)</td>
   </tr>
   <tr>
   <td>社會科學院</td>
-  <td>1政治學系(含碩士在職專班、碩士班、博士班)<br />(1)政治理論組<br />(2)國際關係組<br />(3)公共行政組<br />2經濟學系(含碩士在職專班、碩士班、博士班)<br />3社會學系(含碩士班、博士班)<br />4社會工作學系(含碩士班、博士班)</td>
-  <td>1國家發展研究所(含碩士在職專班、碩士班、博士班)<br />2新聞研究所(含碩士班)<br />3公共事務研究所(含碩士班)</td>
+  <td>⒈政治學系(含碩士在職專班、碩士班、博士班)<br />⑴政治理論組<br />⑵國際關係組<br />⑶公共行政組<br />⒉經濟學系(含碩士在職專班、碩士班、博士班)<br />⒊社會學系(含碩士班、博士班)<br />⒋社會工作學系(含碩士班、博士班)</td>
+  <td>⒈國家發展研究所(含碩士在職專班、碩士班、博士班)<br />⒉新聞研究所(含碩士班)<br />⒊公共事務研究所(含碩士班)</td>
   <td></td>
   </tr>
   <tr>
   <td>醫學院</td>
-  <td>1醫學系<br />(1)解剖學暨細胞生物學科(含碩士班、博士班)<br />(2)生物化學暨分子生物學科(含碩士班、博士班)<br />(3)生理學科(含碩士班、博士班)<br />(4)寄生蟲學科<br />(5)微生物學科(含碩士班：微生物及免疫學組、寄生蟲學組、博士班)<br />(6)藥理學科(含碩士班、博士班)<br />(7)醫學教育暨生醫倫理學科(含碩士班)<br />(8)病理學科(含碩士班、博士班)<br />(9)內科<br />(10)外科<br />(11)皮膚科<br />(12)泌尿科<br />(13)小兒科<br />(14)婦產科<br />(15)神經科<br />(16)精神科<br />(17)眼科<br />(18)耳鼻喉科<br />(19)放射線科<br />(20)檢驗醫學科<br />(21)麻醉科<br />(22)法醫學科(含碩士班)<br />(23)家庭醫學科<br />(24)復健科<br />(25)骨科<br />(26)急診醫學科<br />(27)環境暨職業醫學科<br />2護理學系(含碩士班、博士班)<br />3醫學檢驗暨生物技術學系(含碩士班、博士班)<br />4物理治療學系(含碩士班、博士班)<br />5職能治療學系(含碩士班、博士班)</td>
-  <td>1臨床醫學研究所(含碩士在職專班、博士班)<br />2毒理學研究所(含碩士班、博士班)<br />3分子醫學研究所(含碩士在職專班、碩士班、博士班)<br />4免疫學研究所(含碩士班、博士班)<br />5腫瘤醫學研究所(含博士班)<br />6基因體暨蛋白體醫學研究所(含碩士班、博士班)<br />7腦與心智科學研究所(含碩士班)<br />8醫療器材與醫學影像研究所(含碩士班)</td>
-  <td>1轉譯醫學博士學位學程<br /> </td>
+  <td>⒈醫學系<br />⑴解剖學暨細胞生物學科(含碩士班、博士班)<br />⑵生物化學暨分子生物學科(含碩士班、博士班)<br />⑶生理學科(含碩士班、博士班)<br />⑷寄生蟲學科<br />⑸微生物學科(含碩士班：微生物及免疫學組、寄生蟲學組、博士班)<br />⑹藥理學科(含碩士班、博士班)<br />⑺醫學教育暨生醫倫理學科(含碩士班)<br />⑻病理學科(含碩士班、博士班)<br />⑼內科<br />⑽外科<br />⑾皮膚科<br />⑿泌尿科<br />⒀小兒科<br />⒁婦產科<br />⒂神經科<br />⒃精神科<br />⒄眼科<br />⒅耳鼻喉科<br />⒆放射線科<br />⒇檢驗醫學科<br />㉑麻醉科<br />㉒法醫學科(含碩士班)<br />㉓家庭醫學科<br />㉔復健科<br />㉕骨科<br />㉖急診醫學科<br />㉗環境暨職業醫學科<br />⒉護理學系(含碩士班、博士班)<br />⒊醫學檢驗暨生物技術學系(含碩士班、博士班)<br />⒋物理治療學系(含碩士班、博士班)<br />⒌職能治療學系(含碩士班、博士班)</td>
+  <td>⒈臨床醫學研究所(含碩士在職專班、博士班)<br />⒉毒理學研究所(含碩士班、博士班)<br />⒊分子醫學研究所(含碩士在職專班、碩士班、博士班)<br />⒋免疫學研究所(含碩士班、博士班)<br />⒌腫瘤醫學研究所(含博士班)<br />⒍基因體暨蛋白體醫學研究所(含碩士班、博士班)<br />⒎腦與心智科學研究所(含碩士班)<br />⒏醫療器材與醫學影像研究所(含碩士班)</td>
+  <td>⒈轉譯醫學博士學位學程<br /> </td>
   </tr>
   <tr>
   <td>牙醫專業學院</td>
-  <td>6牙醫學系</td>
-  <td>9口腔生物科學研究所(含碩士班、博士班)<br />10臨床牙醫學研究所(含碩士在職專班、碩士班、博士班)</td>
+  <td>⒍牙醫學系</td>
+  <td>⒐口腔生物科學研究所(含碩士班、博士班)<br /<td>⒑臨床牙醫學研究所(含碩士在職專班、碩士班、博士班)</td>
   <td></td>
   </tr>
   <tr>
   <td>藥學專業學院</td>
-  <td>7藥學系(含碩士班、博士班：藥物科技組、分子醫藥組)</td>
-  <td>11臨床藥學研究所(含碩士班)</td>
+  <td>⒎藥學系(含碩士班、博士班：藥物科技組、分子醫藥組)</td>
+  <td>⒒臨床藥學研究所(含碩士班)</td>
   <td></td>
   </tr>
   <tr>
   <td>工學院</td>
-  <td>1土木工程學系(含碩士在職專班：營建工程與管理組、碩士班：大地工程組、結構工程組、水利工程組、交通工程組、電腦輔助工程組、營建工程與管理組、博士班)<br />2機械工程學系(含碩士班：流體力學組、熱學組、航空工程組、固體力學組、設計組、製造組、系統控制組、博士班)<br />3化學工程學系(含碩士在職專班、碩士班、博士班)<br />4工程科學及海洋工程學系(含碩士班、博士班)<br />5材料科學與工程學系(含碩士班、博士班)</td>
-  <td>1環境工程學研究所(含碩士在職專班：環境規劃與管理組、碩士班：環境科學與工程組、環境規劃與管理組、博士班)<br />2應用力學研究所(含碩士班、博士班)<br />3建築與城鄉研究所(含碩士班、博士班)<br />4工業工程學研究所(含碩士班、博士班)<br />5醫學工程學研究所(與醫學院合設)(含碩士班、博士班)<br />6高分子科學與工程學研究所(含碩士班、博士班)</td>
-  <td>1綠色永續材料與精密元件博士學位學程</td>
+  <td>⒈土木工程學系(含碩士在職專班：營建工程與管理組、碩士班：大地工程組、結構工程組、水利工程組、交通工程組、電腦輔助工程組、營建工程與管理組、博士班)<br />⒉機械工程學系(含碩士班：流體力學組、熱學組、航空工程組、固體力學組、設計組、製造組、系統控制組、博士班)<br />⒊化學工程學系(含碩士在職專班、碩士班、博士班)<br />⒋工程科學及海洋工程學系(含碩士班、博士班)<br />⒌材料科學與工程學系(含碩士班、博士班)</td>
+  <td>⒈環境工程學研究所(含碩士在職專班：環境規劃與管理組、碩士班：環境科學與工程組、環境規劃與管理組、博士班)<br />⒉應用力學研究所(含碩士班、博士班)<br />⒊建築與城鄉研究所(含碩士班、博士班)<br />⒋工業工程學研究所(含碩士班、博士班)<br />⒌醫學工程學研究所(與醫學院合設)(含碩士班、博士班)<br />⒍高分子科學與工程學研究所(含碩士班、博士班)</td>
+  <td>⒈綠色永續材料與精密元件博士學位學程</td>
   </tr>
   <tr>
   <td>生物資源暨農學院</td>
-  <td>1農藝學系(含碩士班：作物科學組、生物統計學組、博士班：作物科學組、生物統計學組)<br />2生物環境系統工程學系(含碩士班、博士班)<br />3農業化學系(含碩士班、博士班)<br />4植物病理與微生物學系(含碩士班、博士班)<br />5森林環境暨資源學系(含碩士在職專班、碩士班、博士班)<br />6動物科學技術學系(含碩士班、博士班)<br />7農業經濟學系(含碩士在職專班、碩士班、博士班)<br />8園藝暨景觀學系(含碩士班：園藝作物組、園産品處理與利用組、景觀暨休憩組、博士班)<br />9生物產業傳播暨發展學系(含碩士班、博士班)<br />10生物產業機電工程學系(含碩士班、博士班)<br />11昆蟲學系(含碩士在職專班、碩士班、博士班)</td>
-  <td>1食品科技研究所(含碩士班、博士班)<br />2生物科技研究所(含碩士班、博士班)</td>
-  <td>1植物醫學碩士學位學程</td>
+  <td>⒈農藝學系(含碩士班：作物科學組、生物統計學組、博士班：作物科學組、生物統計學組)<br />⒉生物環境系統工程學系(含碩士班、博士班)<br />⒊農業化學系(含碩士班、博士班)<br />⒋植物病理與微生物學系(含碩士班、博士班)<br />⒌森林環境暨資源學系(含碩士在職專班、碩士班、博士班)<br />⒍動物科學技術學系(含碩士班、博士班)<br />⒎農業經濟學系(含碩士在職專班、碩士班、博士班)<br />⒏園藝暨景觀學系(含碩士班：園藝作物組、園産品處理與利用組、景觀暨休憩組、博士班)<br />⒐生物產業傳播暨發展學系(含碩士班、博士班)<br /<td>⒑生物產業機電工程學系(含碩士班、博士班)<br />11昆蟲學系(含碩士在職專班、碩士班、博士班)</td>
+  <td>⒈食品科技研究所(含碩士班、博士班)<br />⒉生物科技研究所(含碩士班、博士班)</td>
+  <td>⒈植物醫學碩士學位學程</td>
   </tr>
   <tr>
   <td>獸醫專業學院</td>
-  <td>12獸醫學系(含碩士班、博士班)</td>
-  <td>3臨床動物醫學研究所(含碩士班)<br />4分子暨比較病理生物學研究所(含碩士班)</td>
+  <td>⒓獸醫學系(含碩士班、博士班)</td>
+  <td>⒊臨床動物醫學研究所(含碩士班)<br />⒋分子暨比較病理生物學研究所(含碩士班)</td>
   <td></td>
   </tr>
   <tr>
   <td>管理學院</td>
-  <td>1工商管理學系<br />(1)企業管理組<br />(2)科技管理組<br />2會計學系(含碩士班、博士班)<br />3財務金融學系(含碩士班、博士班)<br />4國際企業學系(含碩士班、博士班)<br />5資訊管理學系(含碩士班、博士班)</td>
-  <td>1商學研究所(含碩士在職專班、碩士班、博士班)<br />2企業管理碩士專班<br />3碩士在職專班：知識管理組、高階公共管理組、會計與管理決策組、財務金融組、國際企業管理組、資訊管理組、商學組<br />4臺大-復旦EMBA境外專班<br />5創業創新管理碩士在職專班</td>
+  <td>⒈工商管理學系<br />⑴企業管理組<br />⑵科技管理組<br />⒉會計學系(含碩士班、博士班)<br />⒊財務金融學系(含碩士班、博士班)<br />⒋國際企業學系(含碩士班、博士班)<br />⒌資訊管理學系(含碩士班、博士班)</td>
+  <td>⒈商學研究所(含碩士在職專班、碩士班、博士班)<br />⒉企業管理碩士專班<br />⒊碩士在職專班：知識管理組、高階公共管理組、會計與管理決策組、財務金融組、國際企業管理組、資訊管理組、商學組<br />⒋臺大-復旦EMBA境外專班<br />⒌創業創新管理碩士在職專班</td>
   <td></td>
   </tr>
   <tr>
   <td>公共衛生學院</td>
-  <td>1公共衛生學系</td>
-  <td>1職業醫學與工業衛生研究所(含碩士班、博士班)<br />2環境衛生研究所(含碩士班、博士班)<br />3流行病學與預防醫學研究所(含碩士在職專班、碩士班、博士班)<br />4健康政策與管理研究所(含碩士在職專班、碩士班、博士班、高階經營碩士在職專班)<br />5健康行為與社區科學研究所(含碩士班)</td>
-  <td>1公共衛生碩士學位學程</td>
+  <td>⒈公共衛生學系</td>
+  <td>⒈職業醫學與工業衛生研究所(含碩士班、博士班)<br />⒉環境衛生研究所(含碩士班、博士班)<br />⒊流行病學與預防醫學研究所(含碩士在職專班、碩士班、博士班)<br />⒋健康政策與管理研究所(含碩士在職專班、碩士班、博士班、高階經營碩士在職專班)<br />⒌健康行為與社區科學研究所(含碩士班)</td>
+  <td>⒈公共衛生碩士學位學程</td>
   </tr>
   <tr>
   <td>電機資訊學院</td>
-  <td>1電機工程學系(含碩士在職專班、碩士班、博士班)<br />2資訊工程學系(含碩士在職專班、碩士班、博士班)</td>
-  <td>1光電工程學研究所(含碩士班、博士班)<br />2電信工程學研究所(含碩士在職專班、碩士班、博士班)<br />3電子工程學研究所(含碩士在職專班、碩士班、博士班)<br />4資訊網路與多媒體研究所(含碩士班、博士班)<br />5生醫電子與資訊學研究所(含碩士在職專班、碩士班、博士班)</td>
+  <td>⒈電機工程學系(含碩士在職專班、碩士班、博士班)<br />⒉資訊工程學系(含碩士在職專班、碩士班、博士班)</td>
+  <td>⒈光電工程學研究所(含碩士班、博士班)<br />⒉電信工程學研究所(含碩士在職專班、碩士班、博士班)<br />⒊電子工程學研究所(含碩士在職專班、碩士班、博士班)<br />⒋資訊網路與多媒體研究所(含碩士班、博士班)<br />⒌生醫電子與資訊學研究所(含碩士在職專班、碩士班、博士班)</td>
   <td></td>
   </tr>
   <tr>
   <td>法律學院</td>
-  <td>1法律學系(含碩士班、博士班)<br />(1)法學組<br />(2)司法組<br />(3)財經法學組</td>
-  <td>1科際整合法律學研究所(含碩士班)</td>
+  <td>⒈法律學系(含碩士班、博士班)<br />⑴法學組<br />⑵司法組<br />⑶財經法學組</td>
+  <td>⒈科際整合法律學研究所(含碩士班)</td>
   <td></td>
   </tr>
   <tr>
   <td>生命科學院</td>
-  <td>1生命科學系(含碩士班、博士班)<br />2生化科技學系(含碩士班、博士班)</td>
-  <td>1植物科學研究所(含碩士班、博士班)<br />2分子與細胞生物學研究所(含碩士班、博士班)<br />3生態學與演化生物學研究所(含碩士班、博士班)<br />4漁業科學研究所(含碩士班、博士班)<br />5生化科學研究所(含碩士班、博士班)</td>
-  <td>1基因體與系統生物學學位學程(含碩士學位、博士學位)</td>
+  <td>⒈生命科學系(含碩士班、博士班)<br />⒉生化科技學系(含碩士班、博士班)</td>
+  <td>⒈植物科學研究所(含碩士班、博士班)<br />⒉分子與細胞生物學研究所(含碩士班、博士班)<br />⒊生態學與演化生物學研究所(含碩士班、博士班)<br />⒋漁業科學研究所(含碩士班、博士班)<br />⒌生化科學研究所(含碩士班、博士班)</td>
+  <td>⒈基因體與系統生物學學位學程(含碩士學位、博士學位)</td>
   </tr>
   <tr>
   <td>共同教育中心</td>
   <td></td>
   <td></td>
-  <td>1統計碩士學位學程<br />2運動設施與健康管理碩士學位學程</td>
+  <td>⒈統計碩士學位學程<br />⒉運動設施與健康管理碩士學位學程</td>
   </tr>
   <tr>
   <td>進修推廣部(進修學士班)</td>
-  <td>1中國文學系<br />2外國語文學系<br />3歷史學系<br />4法律學系<br />5企業管理學系</td>
+  <td>⒈中國文學系<br />⒉外國語文學系<br />⒊歷史學系<br />⒋法律學系<br />⒌企業管理學系</td>
   <td></td>
-  <td>1事業經營碩士在職學位學程<br />2事業經營法務碩士在職學位學程</td>
+  <td>⒈事業經營碩士在職學位學程<br />⒉事業經營法務碩士在職學位學程</td>
   </tr>
   </table>
   <p class="footnote">105 年 10 月 19 日臺教高(一)字第 1050146848 號函核定；本表自 105 年 8 月 1 日生效。</p>
@@ -269,19 +269,19 @@
   <th style="width: 5em">備註</th>
   </tr>
   <tr>
-  <td>1. 校務發展規劃委員會</td>
+  <td>⒈校務發展規劃委員會</td>
   <td></td>
   </tr>
   <tr>
-  <td>2. 教職員宿舍委員會</td>
+  <td>⒉教職員宿舍委員會</td>
   <td></td>
   </tr>
   <tr>
-  <td>3. 校產清理委員會</td>
+  <td>⒊校產清理委員會</td>
   <td></td>
   </tr>
   <tr>
-  <td>4. 程序委員會</td>
+  <td>⒋程序委員會</td>
   <td></td>
   </tr>
   </table>
